--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.4",
     "keyword-extractor": "0.0.15",
     "log4js": "^3.0.6",
-    "mongoose": "^5.3.3"
+    "mongoose": "^5.3.3",
+    "mongoose-auto-increment": "^5.0.1"
   }
 }
